# AndroidStudy_company

./: build.gradle.kts  readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_main2.xml
app/src/main/res/values/: strings.xml
bitechtest/: build.gradle.kts
bitechtest/src/main/: AndroidManifest.xml
bitechtest/src/main/cpp/: CMakeLists.txt  image_generation.cpp  llama_inference.cpp
bitechtest/src/main/res/drawable/: rounded_edittext_background.xml
bitechtest/src/main/res/layout/: activity_history.xml  activity_home.xml  activity_text_to_image.xml
bitechtest/src/main/res/mipmap-anydpi/: ic_launcher.xml
bitechtest/src/main/res/values/: strings.xml  themes.xml
bitechtest/src/main/res/values-night/: themes.xml
chapter03/: build.gradle.kts
chapter03/src/main/: AndroidManifest.xml
chapter03/src/main/res/layout/: activity_button_click.xml  activity_button_enable.xml  activity_button_long_click.xml  activity_button_style.xml  activity_cacluator.xml  activity_grid_layout.xml  activity_image_button.xml  (+11 more)
chapter04/: build.gradle.kts
chapter04/src/main/: AndroidManifest.xml
chapter05/: build.gradle.kts
chapter05/src/main/: AndroidManifest.xml
chapter06/: build.gradle.kts
chapter06/src/main/: AndroidManifest.xml
chapter07-client/: build.gradle.kts
chapter07-client/src/main/: AndroidManifest.xml
chapter07-server/: build.gradle.kts
chapter07-server/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+152 files in other folders)
